# nxt_ros

./: .hgignore  stack.xml
nxt/: CMakeLists.txt  package.xml  stack.xml
nxt/nxt_controllers/: manifest.xml
nxt/nxt_controllers/scripts/: base_controller.py  base_odometry.py  joint_position_controller.py
nxt/nxt_lxf2urdf/scripts/: lxf2urdf.py
nxt/nxt_python/: manifest.xml  rosdoc.yaml
nxt/nxt_ros/: manifest.xml
nxt/nxt_ros/scripts/: nxt_ros.py
nxt_apps/: stack.xml
nxt_apps/nxt_assisted_teleop/: manifest.xml
nxt_apps/nxt_assisted_teleop/launch/sensor_car/: assisted_teleop.launch
nxt_apps/nxt_teleop/: manifest.xml  teleop_joy.launch  teleop_keyboard.launch
nxt_apps/nxt_teleop/src/: nxt_joy.cpp  nxt_key.cpp
nxt_controllers/: CMakeLists.txt  package.xml
nxt_description/: CMakeLists.txt  package.xml
nxt_lxf2urdf/: CMakeLists.txt  package.xml
nxt_msgs/: CMakeLists.txt  package.xml
nxt_python/: CMakeLists.txt
nxt_python/sensor_tests/: touch_sensor_test.py
nxt_robots/: stack.xml
nxt_robots/nxt_robot_2.0_kit_test/: manifest.xml  robot.launch
nxt_robots/nxt_robot_gyro_car/: manifest.xml  robot.launch
nxt_robots/nxt_robot_sensor_car/: manifest.xml  robot.launch  robot.yaml
nxt_ros/: CMakeLists.txt  package.xml
nxt_ros/scripts/: nxt_ros.py
nxt_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
nxt_rviz_plugin/src/: nxt_color_display.cpp  nxt_color_display.h  nxt_color_visual.cpp  nxt_color_visual.h  nxt_ultrasonic_display.cpp  nxt_ultrasonic_display.h  nxt_ultrasonic_visual.cpp  nxt_ultrasonic_visual.h
