<?xml version="1.0"?>
<package>
  <name>nxt</name>
  <version>0.0.0</version>
  <description>The nxt package</description>

  <maintainer email="daevaorn@gmail.com">alexkoshelev</maintainer>

  <license>BSD</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
  
  <run_depend>nxt_controllers</run_depend>
  <run_depend>nxt_lxf2urdf</run_depend>
  <run_depend>nxt_python</run_depend>
  <run_depend>nxt_rviz_plugin</run_depend>
  <run_depend>nxt_description</run_depend>
  <run_depend>nxt_msgs</run_depend>
  <run_depend>nxt_ros</run_depend>

</package>
