<package>
  <name>nxt_lxf2urdf</name>
  <version>0.0.0</version>
  <description>

     nxt_lxf2urdf converts a <a href="http://ldd.lego.com/">LEGO
     Digital Design file (*.lxf)</a> 
     to <a href="http://ros.org/wiki/urdf">urdf </a>.  nxt_lxf2urdf
     needs a (*.lxf) and a (*.ldr) file for completing the conversion
     from lxf to urdf.  It also has the ldraw.xml file that is in the
     assests folder of the LEGO Digital Designer which has been
     modified to add more parts.

  </description>
  <author>Melonee Wise</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/nxt_lxf2urdf</url>

  <maintainer email="daevaorn@gmail.com">Alexander Koshelev</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>


