<package>
  <name>nxt_msgs</name>
  <version>0.0.0</version>
  <description>
    The nxt_msgs package contains a set of messages to publish data coming from various NXT sensor.

  </description>
  <author>Wim Meeussen</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/nxt_msgs</url>
  <maintainer email="daevaorn@gmail.com">Alexander Koshelev</maintainer>

  <buildtool_depend>catkin</buildtool_depend>  

  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


