<package>
  <name>nxt_ros</name>
  <version>0.0.0</version>
  <description>
     The nxt_ros package provides the bindings between the NXT world
     and the ROS world.  This package will create a ROS topic for each
     NXT sensor, and publish the sensor's data on this topic. The
     package also creates a topic for each NXT motor, which allows you
     to command the motor from ROS. The nxt_ros bindings talk directly
     to the NXT brick, either over USB or over Bluetooth (note that
     the Bluetooth connection is currently too slow to be very
     useful).  Binding an NXT robot to ROS only requires a single
     configuration file.
  </description>
  <author>Wim Meeussen</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/nxt_ros</url>

  <maintainer email="daevaorn@gmail.com">Alexander Koshelev</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>nxt_python</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>nxt_msgs</run_depend> 
</package>


